--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "ethers": "^6.13.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
+    "react-toastify": "^11.0.5",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.8.1",
     "ts-node": "^10.9.1",
