--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "ethers": "^5.7.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.5.1",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.17"
