--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
+    "@reown/appkit-adapter-ethers5": "^1.7.3",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "@types/three": "^0.176.0",
