--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,5 @@
 SERVER_PRIVATE_KEY=
-RPC_URL=
-CONTRACT_ADDRESS=
+RPC_URL=https://testnet-rpc.monad.xyz/
+CONTRACT_ADDRESS=0x2e1a7b028C45Ea722f660BE18d6f759e439004eB
+FUSE_SECRET_KEY="Match with frontednd fuse key"
 
